--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.5.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.cbs.springcourse.rest</groupId>
-	<artifactId>FirstRestApp</artifactId>
+	<groupId>rest</groupId>
+	<artifactId>RestApiTaskListManagment</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>MyRestApp</name>
-	<description>First REST Application</description>
+	<name>RestApiTaskListManagment</name>
+	<description>REST API Task List Managment</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -35,13 +35,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
-<!--		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>-->
-
 
 		<dependency>
 			<groupId>mysql</groupId>
