--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/rest_first_db
+spring.datasource.url=jdbc:mysql://localhost:3306/rest_api_genshin_tasks
 spring.datasource.username=root
 spring.datasource.password=root
 
